fix route in view

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,7 +42,7 @@
           .well.sidebar-nav
             %ul.nav.nav-list
               %li.nav-header Sidebar
-              %li= link_to "Złóż zamówienie", "/orders/create"
+              %li= link_to "Złóż zamówienie", "/orders/new"
               %li= link_to "Twoje zamówienia", "/orders"
         .span9
           = bootstrap_flash
