--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,6 +44,7 @@
               %li.nav-header Sidebar
               %li= link_to "Złóż zamówienie", "/orders/create"
               %li= link_to "Twoje zamówienia", "/orders"
+              %li= link_to "Lista obiadów", dinners_path
         .span9
           = bootstrap_flash
           = yield
