--- a/app/views/orders/edit.html.haml
+++ b/app/views/orders/edit.html.haml
@@ -3,4 +3,6 @@
   - order.dinners.each_with_index do |d, i|
     = select_tag "order[dinner_ids][#{i}]", options_from_collection_for_select(dinners.all, "id", "name", d.id)
   %br
+  - if current_user.is_admin?
+    = select_tag "order[status]", options_for_select([:waiting, :not_sent, :sent], order.status) 
   = submit_tag
