--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -1,5 +1,8 @@
 = form_tag orders_path do 
   = label_tag 'Dinners'
+  - order.dinners.each do |d|
+    = select_tag "order[dinner_ids][]", options_from_collection_for_select(dinners.all, "id", "name", d.id)
   = select_tag "order[dinner_ids][]", options_from_collection_for_select(dinners.all, "id", "name")
   %br
-  = submit_tag
+  = submit_tag 'Add', name: :form_action
+  = submit_tag 'Finish', name: :form_action
