fix root url in logo link

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") Slaska
+          %a.brand(href=root_url) Slaska
           .container.nav-collapse
             %ul.nav
               -unless current_user.nil?
